# paxy

./: .gitignore  Makefile  main.py  mkdocs.yml  pyproject.toml
docs/: api.md  architecture.md  configuration.md  getting-started.md  index.md  protocols.md  replay.md  rule-engine.md  scripting.md  web-ui.md
paxy/api/: server.py
paxy/cert/: ca.py
paxy/config/: config.py
paxy/graphql/: detector.py
paxy/interceptor/: interceptor.py
paxy/proto/: grpc.py  ws.py
paxy/proxy/: proxy.py
paxy/replay/: replay.py
paxy/rule/: rule.py
paxy/script/: engine.py
paxy/store/: models.py  store.py
paxy/ui/: app.py  cui.py  detail.py
pypproxy/ab_test/: runner.py
pypproxy/api/: server.py
pypproxy/frida/: device.py
pypproxy/macro/: runner.py
pypproxy/report/: generator.py
pypproxy/security/: idor.py
pypproxy/session/: manager.py
pypproxy/ui/: ab_tab.py  app.py  frida_tab.py  macro_tab.py  report_tab.py  session_tab.py
tests/: test_all_features.py  test_frida.py
