[project]
name = "paxy"
version = "0.1.0"
description = "MITM HTTP/HTTPS proxy for inspecting and modifying traffic"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "PyYAML>=6.0.1",
    "nicegui>=1.4.0",
    "rich>=13.0.0",
]

[project.scripts]
paxy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
